Styling and final markup

--- a/public/style.css
+++ b/public/style.css
@@ -1,4 +1,20 @@
 @import url("http://fonts.googleapis.com/css?family=Open+Sans+Condensed:300");
+@import url("https://fonts.googleapis.com/css?family=Parisienne|Roboto|Playfair+Display|Roboto+Condensed&display=swap");
+
+* {
+  border: 0;
+  margin: 0;
+  padding: 0;
+  box-sizing: border-box;
+}
+
+body {
+  height: 100vh;
+}
+
+#app {
+  height: 100%;
+}
 
 .form-style-8 {
   font-family: "Open Sans Condensed", arial, sans;
@@ -11,10 +27,10 @@
   -webkit-box-shadow: 0px 0px 15px rgba(0, 0, 0, 0.22);
 }
 .form-style-8 h2 {
-  background: #4d4d4d;
+  background: #3f51b5;
   text-transform: uppercase;
   font-family: "Open Sans Condensed", sans-serif;
-  color: #797979;
+  color: #ffffff;
   font-size: 18px;
   font-weight: 100;
   padding: 20px;
@@ -49,13 +65,12 @@
   resize: none;
   overflow: hidden;
 }
-.form-style-8 input[type="button"],
-.form-style-8 input[type="submit"] {
-  -moz-box-shadow: inset 0px 1px 0px 0px #45d6d6;
-  -webkit-box-shadow: inset 0px 1px 0px 0px #45d6d6;
-  box-shadow: inset 0px 1px 0px 0px #45d6d6;
-  background-color: #2cbbbb;
-  border: 1px solid #27a0a0;
+.form-style-8 button {
+  -moz-box-shadow: inset 0px 1px 0px 0px #3f51b5;
+  -webkit-box-shadow: inset 0px 1px 0px 0px #3f51b5;
+  box-shadow: inset 0px 1px 0px 0px #3f51b5;
+  background-color: #3f51b5;
+  border: 1px solid #3f51b5;
   display: inline-block;
   cursor: pointer;
   color: #ffffff;
@@ -65,150 +80,34 @@
   text-decoration: none;
   text-transform: uppercase;
 }
-.form-style-8 input[type="button"]:hover,
-.form-style-8 input[type="submit"]:hover {
-  background: linear-gradient(to bottom, #34caca 5%, #30c9c9 100%);
-  background-color: #34caca;
-}
-.form-style-8 input[type="checkbox"] {
-  background: #4d4d4d;
-  font-family: "Open Sans Condensed", sans-serif;
-  color: #797979;
-  font-size: 18px;
-  font-weight: 100;
-}
-
-label {
-  font-family: "Open Sans Condensed", arial, sans;
-  color: #797979;
-  font-size: 18px;
-  font-weight: 100;
-}
-
-header {
-  background: #4d4d4d;
-  font-family: "Open Sans Condensed", sans-serif;
-  color: #797979;
-  font-size: 18px;
-  margin-top: 0;
-  padding: 8px;
-  display: flex;
-  justify-content: space-between;
-  flex-direction: row;
-  font-weight: 600;
-  margin-left: 10px;
-}
-@import url('https://fonts.googleapis.com/css?family=Parisienne|Roboto|Playfair+Display|Roboto+Condensed&display=swap');
-
-* {
-  border: 0;
-  margin: 0;
-  padding: 0;
-  box-sizing: border-box;
-}
-
-body {
-  height: 100vh;
-}
-
-#app {
-  height: 100%;
-}
-
-
-.form-style-8{
-	font-family: 'Open Sans Condensed', arial, sans;
-	width: 500px;
-	padding: 30px;
-	background: #FFFFFF;
-	margin: 50px auto;
-	box-shadow: 0px 0px 15px rgba(0, 0, 0, 0.22);
-	-moz-box-shadow: 0px 0px 15px rgba(0, 0, 0, 0.22);
-	-webkit-box-shadow:  0px 0px 15px rgba(0, 0, 0, 0.22);
-}
-.form-style-8 h2{
-	background: #4D4D4D;
-	text-transform: uppercase;
-	font-family: 'Open Sans Condensed', sans-serif;
-	color: #797979;
-	font-size: 18px;
-	font-weight: 100;
-	padding: 20px;
-	margin: -30px -30px 30px -30px;
-}
-.form-style-8 input[type="text"],
-.form-style-8 input[type="date"],
-.form-style-8 input[type="datetime"],
-.form-style-8 input[type="email"],
-.form-style-8 input[type="number"],
-.form-style-8 input[type="search"],
-.form-style-8 input[type="time"],
-.form-style-8 input[type="url"],
-.form-style-8 input[type="password"],
-.form-style-8 textarea,
-.form-style-8 select
-{
-	box-sizing: border-box;
-	-webkit-box-sizing: border-box;
-	-moz-box-sizing: border-box;
-	outline: none;
-	display: block;
-	width: 100%;
-	padding: 7px;
-	border: none;
-	border-bottom: 1px solid #ddd;
-	background: transparent;
-	margin-bottom: 10px;
-	font: 16px Arial, Helvetica, sans-serif;
-	height: 45px;
-}
-.form-style-8 textarea{
-	resize:none;
-	overflow: hidden;
-}
-.form-style-8 button{
-	-moz-box-shadow: inset 0px 1px 0px 0px #45D6D6;
-	-webkit-box-shadow: inset 0px 1px 0px 0px #45D6D6;
-	box-shadow: inset 0px 1px 0px 0px #45D6D6;
-	background-color: #2CBBBB;
-	border: 1px solid #27A0A0;
-	display: inline-block;
-	cursor: pointer;
-	color: #FFFFFF;
-	font-family: 'Open Sans Condensed', sans-serif;
-	font-size: 14px;
-	padding: 8px 18px;
-	text-decoration: none;
-	text-transform: uppercase;
-}
 .form-style-8 button:hover {
-	background:linear-gradient(to bottom, #34CACA 5%, #30C9C9 100%);
-	background-color:#34CACA;
+  background: linear-gradient(to bottom, #4f5eb1 5%, #4f5eb1 100%);
+  background-color: #4f5eb1;
 }
 
-/* this is where i started adding CSS just so i couldd render the button and see what it looked like on screen*/
 .content {
-	display: flex;
-	justify-content: center;
-	align-items: center;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
 }
 
 .header {
-	display: flex;
-	flex-direction: row-reverse;
-	background-color: #4D4D4D;
-	height: 40px;
+  display: flex;
+  flex-direction: row-reverse;
+  background-color: #3f51b5;
+  height: 40px;
 }
 
 .welcomeMessage {
-	font-size: 50px;
+  font-size: 50px;
 }
 
 .logout {
-	margin-top: 2px;
-	height: 90%;
-	margin-right: 15px;
-	border-radius: 5px;
+  margin-top: 2px;
+  height: 90%;
+  margin-right: 15px;
+  border-radius: 5px;
 }
 
 #loading {
@@ -221,8 +120,8 @@ body {
 
   backdrop-filter: blur(3px);
   background: rgba(0, 0, 0, 0.4);
-  
-  font-family: 'Roboto', sans-serif;
+
+  font-family: "Roboto", sans-serif;
   font-size: 2rem;
   text-align: center;
 }
