--- a/public/style.css
+++ b/public/style.css
@@ -17,7 +17,7 @@ body {
 }
 
 .form-style-8 {
-  font-family: "Open Sans Condensed", arial, sans;
+  font-family:Arial;
   width: 500px;
   padding: 30px;
   background: #ffffff;
@@ -29,7 +29,7 @@ body {
 .form-style-8 h2 {
   background: #3f51b5;
   text-transform: uppercase;
-  font-family: "Open Sans Condensed", sans-serif;
+  font-family:Arial;
   color: #ffffff;
   font-size: 18px;
   font-weight: 100;
@@ -58,7 +58,7 @@ body {
   border-bottom: 1px solid #ddd;
   background: transparent;
   margin-bottom: 10px;
-  font: 16px Arial, Helvetica, sans-serif;
+	font-family:Arial;
   height: 45px;
 }
 .form-style-8 textarea {
@@ -74,7 +74,7 @@ body {
   display: inline-block;
   cursor: pointer;
   color: #ffffff;
-  font-family: "Open Sans Condensed", sans-serif;
+  font-family:Arial;
   font-size: 14px;
   padding: 8px 18px;
   text-decoration: none;
@@ -112,15 +112,12 @@ body {
 
 #loading {
   position: fixed;
-
   top: 0;
   left: 0;
   right: 0;
   bottom: 0;
-
   backdrop-filter: blur(3px);
   background: rgba(0, 0, 0, 0.4);
-
   font-family: "Roboto", sans-serif;
   font-size: 2rem;
   text-align: center;
@@ -137,4 +134,27 @@ body {
   top: 50%;
   left: 50%;
   transform: translate(-50%, -50%);
+}
+button {
+	
+	background:linear-gradient(to bottom, #3f51b5 5%,#3f51b5 100%);
+	background-color: #3f51b5;
+	border-radius:6px;
+	display:inline-block;
+	cursor:pointer;
+	color:#ffffff;
+	font-family:Arial;
+	font-size:15px;
+	font-weight:bold;
+	padding:6px 24px;
+	text-decoration:none;
+	text-shadow:0px 1px 0px #1570cd;
+}
+button:hover {
+	background:linear-gradient(to bottom, #3f51b5 5%, #3f51b5 100%);
+	background-color:#3f51b5;
+}
+button:active {
+	position:relative;
+	top:1px;
 }
